@@ -1,11 +1,11 @@
 ; pthread.def
-; Last updated: $Date: 1998/10/04 22:12:52 $
+; Last updated: $Date: 1998/10/04 23:01:59 $
 
 ; Currently unimplemented functions are commented out.
 
 LIBRARY pthread
 
-EXPORT
+EXPORTS
 pthread_atfork
 pthread_attr_destroy
 pthread_attr_getdetachstate
@@ -13,7 +13,7 @@ pthread_attr_getdetachstate
 pthread_attr_getschedparam
 ;pthread_attr_getschedpolicy
 ;pthread_attr_getscope
-pthread_attr_getstackaddr
+;pthread_attr_getstackaddr
 pthread_attr_getstacksize
 pthread_attr_init
 pthread_attr_setdetachstate
@@ -21,11 +21,11 @@ pthread_attr_setdetachstate
 pthread_attr_setschedparam
 ;pthread_attr_setschedpolicy
 ;pthread_attr_setscope
-pthread_attr_setstackaddr
+;pthread_attr_setstackaddr
 pthread_attr_setstacksize
 pthread_cancel
-pthread_cleanup_pop
-pthread_cleanup_push
+;pthread_cleanup_pop
+;pthread_cleanup_push
 pthread_condattr_destroy
 pthread_condattr_getpshared
 pthread_condattr_init
@@ -45,15 +45,15 @@ pthread_getspecific
 pthread_join
 pthread_key_create
 pthread_key_delete
-pthread_kill
+;pthread_kill
 pthread_mutexattr_destroy
 ;pthread_mutexattr_getprioceiling
 ;pthread_mutexattr_getprotocol
-phtread_mutexattr_getpshared
+;phtread_mutexattr_getpshared
 pthread_mutexattr_init
 ;pthread_mutexattr_setprioceiling
 ;pthread_mutexattr_setprotocol
-pthread_mutexattr_setpshared
+;pthread_mutexattr_setpshared
 pthread_mutexattr_destroy
 pthread_mutex_init
 pthread_mutex_lock
@@ -65,5 +65,5 @@ pthread_setcancelstate
 pthread_setcanceltype
 pthread_setschedparam
 pthread_setspecific
-pthread_sigmask
+;pthread_sigmask
 pthread_testcancel
