@@ -1,12 +1,0 @@
-/*
- * Test for pthread_join().
- *
- * Depends on API functions: pthread_create().
- */
-
-#include <pthread.h>
-
-int
-main(int argc, char * argv[])
-{
-}
